remove calls to Boolean constructors